snake_demo/snake-namespace.yml
kind: Namespace

apiVersion: v1

metadata:
  name: snake-go
  labels:
    app: snake-game
