snake_demo/snake-service.yml
apiVersion: v1
kind: Service
metadata:
  name: snake
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
