snake_demo/snake_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: snake
  namespace: snake-go
spec:
  tls:
    - hosts:
        - snake.lab.qstetten.de
      secretName: snake-cert
  rules:
    - host: "snake.lab.qstetten.de"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: snake
                port:
                  number: 80
